err/sasa.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nltk'...
Listing './lib/python3.5/site-packages/nltk/app'...
Listing './lib/python3.5/site-packages/nltk/ccg'...
Listing './lib/python3.5/site-packages/nltk/chat'...
Listing './lib/python3.5/site-packages/nltk/chunk'...
Listing './lib/python3.5/site-packages/nltk/classify'...
Listing './lib/python3.5/site-packages/nltk/cluster'...
Listing './lib/python3.5/site-packages/nltk/corpus'...
Listing './lib/python3.5/site-packages/nltk/corpus/reader'...
Listing './lib/python3.5/site-packages/nltk/draw'...
Listing './lib/python3.5/site-packages/nltk/inference'...
Listing './lib/python3.5/site-packages/nltk/metrics'...
Listing './lib/python3.5/site-packages/nltk/misc'...
Listing './lib/python3.5/site-packages/nltk/parse'...
Listing './lib/python3.5/site-packages/nltk/sem'...
Listing './lib/python3.5/site-packages/nltk/sentiment'...
Listing './lib/python3.5/site-packages/nltk/stem'...
Listing './lib/python3.5/site-packages/nltk/tag'...
Listing './lib/python3.5/site-packages/nltk/tbl'...
Listing './lib/python3.5/site-packages/nltk/test'...
Listing './lib/python3.5/site-packages/nltk/test/unit'...
Listing './lib/python3.5/site-packages/nltk/test/unit/translate'...
Listing './lib/python3.5/site-packages/nltk/tokenize'...
Listing './lib/python3.5/site-packages/nltk/translate'...
Listing './lib/python3.5/site-packages/nltk/twitter'...
Listing './lib/python3.5/site-packages/nltk-3.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/sasa'...
Compiling './lib/python3.5/site-packages/sasa/gflags.py'...
***   File "./lib/python3.5/site-packages/sasa/gflags.py", line 906
    except FlagsError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sasa/happyfuntokenizing.py'...
***   File "./lib/python3.5/site-packages/sasa/happyfuntokenizing.py", line 171
    print "Apologies. The random tweet functionality requires the Python twitter library: http://code.google.com/p/python-twitter/"
                                                                                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sasa/happyfuntokenizing_old.py'...
***   File "./lib/python3.5/site-packages/sasa/happyfuntokenizing_old.py", line 187
    print "Apologies. The random tweet functionality requires the Python twitter library: http://code.google.com/p/python-twitter/"
                                                                                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sasa/models'...
Compiling './lib/python3.5/site-packages/sasa/sentiment.py'...
***   File "./lib/python3.5/site-packages/sasa/sentiment.py", line 78
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sasa/tokenizer_bak.py'...
***   File "./lib/python3.5/site-packages/sasa/tokenizer_bak.py", line 25
    print text
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sasa-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
